// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideBarPageBody component Basic Version Should match snapshot 1`] = `
.c0 {
  -webkit-transition: 100ms linear;
  transition: 100ms linear;
  margin-left: 300px;
  min-height: 10px;
}

<SideBarPageBody__BasicSideBarPageBody
  sideBarShown={true}
>
  <StyledComponent
    forwardedClass={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": undefined,
        "componentStyle": ComponentStyle {
          "componentId": "SideBarPageBody__BasicSideBarPageBody-sc-1qqh35b-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "transition:100ms linear;margin-left:",
            [Function],
            ";min-height:10px;",
          ],
        },
        "displayName": "SideBarPageBody__BasicSideBarPageBody",
        "render": [Function],
        "styledComponentId": "SideBarPageBody__BasicSideBarPageBody-sc-1qqh35b-0",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    sideBarShown={true}
  >
    <div
      className="c0"
    />
  </StyledComponent>
</SideBarPageBody__BasicSideBarPageBody>
`;

exports[`SideBarPageBody component with Header Version Should match snapshot 1`] = `
.c0 {
  -webkit-transition: 100ms linear;
  transition: 100ms linear;
  margin-left: 0px;
  min-height: 10px;
  margin-top: 56px;
}

<SideBarPageBody__HeaderSideBarPageBody>
  <StyledComponent
    forwardedClass={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": undefined,
        "componentStyle": ComponentStyle {
          "componentId": "SideBarPageBody__HeaderSideBarPageBody-sc-1qqh35b-1",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "transition:100ms linear;margin-left:",
            [Function],
            ";min-height:10px;",
            "margin-top:56px;",
          ],
        },
        "displayName": "SideBarPageBody__HeaderSideBarPageBody",
        "render": [Function],
        "styledComponentId": "SideBarPageBody__HeaderSideBarPageBody-sc-1qqh35b-1",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <div
      className="c0"
    />
  </StyledComponent>
</SideBarPageBody__HeaderSideBarPageBody>
`;
